<resources>
    <string name="app_name">SOSPet</string>
    <!-- =========================================== -->
    <!--     Textos para el login       -->
    <!-- =========================================== -->
    <string name="nombre_app">SOSPet</string>
    <string name="login_titulo">Bienvenido a SOSPet</string>
    <string name="login_subtitulo"> </string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="olviste_pass">¿Olvidaste tu contraseña?</string>
    <string name="no_cuenta">¿No tienes cuenta?</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="url_terminos_de_uso">https://pethappy.cl/policies/privacy-policy</string>
</resources>